# CribGuard-Display

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  lv-drivers.pc.in  settings.cfg
config/: lv_conf.h  lv_drv_conf.h
ui/: ui.cpp  ui.h
